Minor refactoring. Fixed UserCard CSS that overlapped with jweets list in UserHome. Added functionality to search for users in the /users page

--- a/client/src/css/UserCard.css
+++ b/client/src/css/UserCard.css
@@ -1,6 +1,6 @@
 .UserCard-Box {
   display: grid;
-  grid-template-columns: min-content min-content 1fr;
+  grid-template-columns: 1fr max-content 2fr;
   grid-template-rows: repeat(6, max-content);
 }
 
@@ -52,6 +52,7 @@
   grid-area: 2 / 3 / 3 / 4;
   font-size: 1.6rem;
   margin: 1rem;
+  padding-left: 1rem;
 }
 
 .UserCard-Bio {
@@ -59,7 +60,7 @@
   color: black;
   font-size: 1.4rem;
   padding: 1rem 2rem;
-  width: 100%;
+  max-width: 500px;
   word-wrap: break-word;
   margin: 1rem auto;
 }
@@ -77,11 +78,12 @@
 }
 
 .UserCard-Button {
-  grid-area: 4 / 1 / 5 / 3;
-  padding: 0.5rem;
+  grid-area: 4 / 1 / 5 / 2;
   font-weight: 800;
   font-size: 1.6rem;
-  margin: 1rem;
+  padding: 1rem;;
+  margin: auto 0 auto 1rem;
+  width: 100%;
   color: black;
   border-radius: 20px;
   box-shadow: none;
@@ -112,9 +114,10 @@
 }
 
 .UserCard-StatHeading {
-  width: 100%;
+  width: auto;
   font-size: 1.4rem;
-  padding: 1rem;
+  padding: 2rem;
+  justify-self: flex-end;
   grid-area: 4 / 3 / 5 / 4;
 }
 
